Version numbers starting with version 2.0.0 adhere to
[[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

Older changes are summarized in subsequent sections.

** [Unreleased]
*** Fixed
    - Allow fragment indices and HTML attributes on quote blocks, see
      [[https://gitlab.com/oer/org-re-reveal/-/merge_requests/30][MR !30]]

** [3.2.0] - 2020-09-01
*** Added
    - Customizable variable ~org-re-reveal-multiplex-client-ext~

** [3.1.1] - 2020-08-23
*** Fixed
    - Point to Readme as documentation

** [3.1.0] - 2020-08-13
*** Added
    - Customizable variable ~org-re-reveal-export-notes-to-pdf~ with
      keyword ~REVEAL_EXPORT_NOTES_TO_PDF~ for export of speaker
      notes to PDF

** [3.0.5] - 2020-08-13
*** Fixed
    - Customization of org-re-reveal-title-slide and
      org-re-reveal-highlight-css works now

** [3.0.4] - 2020-07-24
*** Fixed
    - Allow empty strings in list keywords

** [3.0.3] - 2020-07-23
*** Fixed
    - Turn ~org-re-reveal-root~ from choice to string, remove outdated
      online CDN location

** [3.0.2] - 2020-07-05
*** Fixed
    - Rename internal function (duplicate definition)

** [3.0.1] - 2020-07-01
*** Fixed
    - Do not combine direction classes for link and its parent

** [3.0.0] - 2020-06-27
*** Added
    - Support for reveal.js 4.x
    - Customizable variable ~org-re-reveal-revealjs-version~ with
      keyword ~REVEAL_VERSION~ for compatibility with reveal.js 4.x
*** Changed
    - ~org-re-reveal-highlight-css~ allows to select among symbols
*** Removed
    - ~org-re-reveal-extra-js~
    - ~org-re-reveal-script-files~
      (use ~org-re-reveal-revealjs-version~ instead)

** [2.12.2] - 2020-05-12
*** Fixed
    - Generate head preamble before MathJax script tags, allowing
      configuration of MathJax in preamble.  Addresses issue #42.

** [2.12.1] - 2020-02-06
*** Fixed
    - Better error messages to notify users of mis-configurations
      - Attempted single file export with remote reveal.js location