@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Test blockquote</title>
+<title>Test merged classes</title>
 <meta name="author" content="Anders Johansson"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
@@ -26,17 +26,15 @@
 <div class="reveal">
 <div class="slides">
 <section id="sec-title-slide">
-<h1 class="title">Test blockquote</h1><h2 class="author">Anders Johansson</h2><p class="date">Created:{{date}}</p>
+<h1 class="title">Test merged classes</h1><h2 class="author">Anders Johansson</h2><p class="date">Created:{{date}}</p>
 </section>
 
 <section>
 <section id="slide-1">
-<h2 id="1"><span class="section-number-2">1</span> Slide with quote</h2>
-<blockquote cite="https://tools.ietf.org/html/rfc1149" class="fragment">
-<p>
-Avian carriers can provide high delay, low throughput, and low altitude service. The connection topology is limited to a single point-to-point path for each carrier, used with standard carriers, but many carriers can be used without significant interference with each other, outside of early spring. This is because of the 3D ether space available to the carriers, in contrast to the 1D ether used by IEEE802.3. The carriers have an intrinsic collision avoidance system, which increases availability.
+<h2 id="1"><span class="section-number-2">1</span> Slide with merged classes</h2>
+<p class="fragment largeFont">
+A large font paragraph that should appear as a fragment
 </p>
-</blockquote>
 </section>
 </section>
 </div>
